k8s/task_8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: web-app
  labels:
    app: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
